@@ -9,7 +9,6 @@ import com.dvk.ct250backend.domain.auth.entity.Permission;
 import com.dvk.ct250backend.domain.auth.mapper.PermissionMapper;
 import com.dvk.ct250backend.domain.auth.repository.PermissionRepository;
 import com.dvk.ct250backend.domain.auth.service.PermissionService;
-import com.dvk.ct250backend.infrastructure.config.database.PermissionSpecification;
 import com.dvk.ct250backend.infrastructure.utils.RequestParamUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
@@ -23,6 +22,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +38,7 @@ public class PermissionServiceImpl implements PermissionService {
         int page = Integer.parseInt(params.getOrDefault("page", "1"));
         int pageSize = Integer.parseInt(params.getOrDefault("pageSize", "10"));
 
-        List<Sort.Order> sortOrders = requestParamUtils.toSortOrders(params.getOrDefault("sort", ""));
+        List<Sort.Order> sortOrders = requestParamUtils.toSortOrders(params, Permission.class);
         Pageable pageable = PageRequest.of(page - 1, pageSize, Sort.by(sortOrders));
         Specification<Permission> spec = getPermissionSpec(params);
         org.springframework.data.domain.Page<Permission> permissionPage = permissionRepository.findAll(spec, pageable);
@@ -52,7 +52,7 @@ public class PermissionServiceImpl implements PermissionService {
                 .meta(meta)
                 .content(permissionPage.getContent().stream()
                         .map(permissionMapper::toPermissionDTO)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
     }
 
@@ -60,17 +60,17 @@ public class PermissionServiceImpl implements PermissionService {
         Specification<Permission> spec = Specification.where(null);
         List<SearchCriteria> methodCriteria = requestParamUtils.getSearchCriteria(params, "method");
         List<SearchCriteria> moduleCriteria = requestParamUtils.getSearchCriteria(params, "module");
-        List<List<SearchCriteria>> allCriteria = List.of(methodCriteria, moduleCriteria);
-        for (List<SearchCriteria> criteriaList : allCriteria) {
-           if(!criteriaList.isEmpty()){
-               Specification<Permission> criteriaSpec = Specification.where(null);
-               for (SearchCriteria criteria: criteriaList){
-                   criteriaSpec = criteriaSpec.or(new PermissionSpecification(criteria));
-               }
-                spec = spec.and(criteriaSpec);
-           }
+        Specification<Permission> methodSpec = Specification.where(null);
+        for (SearchCriteria criteria : methodCriteria) {
+            methodSpec = methodSpec.or(((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("method"), criteria.getValue())));
         }
-
+        Specification<Permission> moduleSpec = Specification.where(null);
+        for (SearchCriteria criteria : moduleCriteria) {
+            moduleSpec = moduleSpec.or(((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("module"), criteria.getValue())));
+        }
+        spec = spec.and(methodSpec).and(moduleSpec);
         return spec;
     }
 
