@@ -1,5 +1,6 @@
 package com.dvk.ct250backend.domain.country.service.impl;
 
+import com.dvk.ct250backend.app.exception.ResourceNotFoundException;
 import com.dvk.ct250backend.domain.country.dto.CountryDTO;
 import com.dvk.ct250backend.domain.country.entity.Country;
 import com.dvk.ct250backend.domain.country.mapper.CountryMapper;
@@ -8,10 +9,11 @@ import com.dvk.ct250backend.domain.country.service.CountryService;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,15 +24,20 @@ public class CountryServiceImpl implements CountryService {
     CountryMapper countryMapper;
 
     @Override
+    @Cacheable(value = "countries")
     public List<CountryDTO> getAllCountries() {
         List<Country> countries = countryRepository.findAll();
         return countries.stream()
                 .map(countryMapper::toCountryDTO)
-                .toList();
+                .collect(Collectors.toList());
+
     }
 
     @Override
-    public Optional<Country> findById(Integer id) { // Implement this method
-        return countryRepository.findById(id);
+    public CountryDTO getCountry(Integer id) throws ResourceNotFoundException {
+        Country country =  countryRepository.findById(id).orElseThrow(
+                () -> new ResourceNotFoundException("Country not found with id: " + id)
+        );
+        return countryMapper.toCountryDTO(country);
     }
 }
